kubernetes-later/app/mltb/mltb/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name mltb
  annotations:
    reloader.stakater.com/auto: "true"
    glance/icon: di:telegram
spec:
  template:
    metadata:
      name: *name
    spec:
      containers:
        - name: *name
          image: ghcr.io/kevinnitrog/homelab/mltb
          ports:
            - name: rclone
              containerPort: 8080
            - name: base
              containerPort: 80
            - name: sth
              containerPort: 8090
            - name: sth-i
              containerPort: 8070
          volumeMounts:
            - name: &saAccount mltb-sa-accounts
              mountPath: /usr/src/app/accounts/
              readOnly: true
            - name: &saToken mltb-sa-token
              mountPath: /usr/src/app/token_sa.pickle
              subPath: token_sa.pickle
              readOnly: true
          startupProbe: &health
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            failureThreshold: 10
          readinessProbe:
            <<: *health
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            <<: *health
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: *saAccount
          secret:
            secretName: *saAccount
        - name: *saToken
          secret:
            secretName: *saToken
  selector: {}
