kubernetes-later/app/mltb/mltb/rlcone.httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mltb-rclone
spec:
  parentRefs:
    - name: default
      sectionName: 8080-https-wildcard
      namespace: traefik
  hostnames:
    - "mltb.${PUBLIC_DOMAIN}"
  rules:
    - backendRefs:
        - name: mltb-mltb
          port: 8080
